<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">InventoryApp</string>

    <string name="editor_activity_title_new_device">Add a device</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="category_overview">Overview</string>

    <string name="category_type">Type</string>

    <string name="category_quantity">Measurement</string>

    <string name="hint_gadget_name">Name</string>

    <string name="hint_gadget_company_name">Supplier</string>

    <string name="hint_gadget_quantity">Quantity</string>

    <string name="type_unknown">Unknown</string>

    <string name="type_laptop">Laptop</string>

    <string name="type_smartphone">Smartphone</string>

    <string name="type_tablet">Tablet</string>

    <string name="hint_supplier_phone">Supplier phone</string>

    <string name="hint_gadget_price">Price</string>

    <string name="editor_insert_pet_successful">Pet saved</string>

    <string name="editor_insert_pet_failed">Error with saving pet</string>

    <string name="editor_screen_activity_title_new">Add a device</string>

    <string name="editor_screen_activity_title_edit">Edit the device</string>

    <string name="delete">Delete</string>

    <string name="delete_dialog_msg">Do you want to delete this device?</string>

    <string name="cancel">Cancel</string>

    <string name="editor_insert_device_successful">Device saved</string>

    <string name="editor_insert_device_failed">All information must be entered!</string>

    <string name="editor_update_device_successful">Device updated</string>

    <string name="editor_update_device_failed">You have to fill all fields.</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
</resources>
